kubernetes/infrastructure/gateway/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway
  labels:
    gateway.networking.k8s.io/access: "true"
