kubernetes/infrastructure/gateway/reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: gateway-can-read-cilium-secrets
  namespace: cilium
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: gateway
  to:
    - group: ""
      kind: Secret
      name: wildcard-orion-tls
