kubernetes/infrastructure/gateway/ceph-dashboard-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ceph-dashboard
  namespace: gateway
spec:
  parentRefs:
    - name: orion
      namespace: gateway
      sectionName: https
  hostnames:
    - "ceph.${domain}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rook-ceph-mgr-dashboard
          namespace: rook-ceph
          port: 7000
