kubernetes/infrastructure/gateway/homepage-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
  namespace: homepage
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Homepage"
    gethomepage.dev/description: "This dashboard"
    gethomepage.dev/group: "Cluster"
    gethomepage.dev/icon: "homepage.png"
spec:
  parentRefs:
    - name: orion
      namespace: gateway
      sectionName: https
  hostnames:
    - "homepage.${domain}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homepage
          port: 3000
