kubernetes/infrastructure/gateway/weave-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: weave-gitops
  namespace: gateway
spec:
  parentRefs:
    - name: orion
      namespace: gateway
      sectionName: https
  hostnames:
    - "weave.${domain}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: weave-gitops
          namespace: flux-system
          port: 9001
